--- a/opencl/Makefile.am
+++ b/opencl/Makefile.am
@@ -70,12 +70,12 @@ opencl_devices.tp: $(srcdir)/gen_opencl_custom_probes.rb $(TRACEPOINT_GEN)
 %.h %.c: %.tp
 	$(LTTNG_GEN_TP) $< -o $*.c -o $*.h
 
-BUILT_SOURCES = $(OPENCL_PROBES_INCL) babeltrace_cl_callbacks.h clprof_callbacks.h
+BUILT_SOURCES = $(OPENCL_PROBES_INCL) babeltrace_cl_callbacks.h clprof_callbacks.h clprof.c
 
 tracer_opencl.c: $(srcdir)/gen_opencl.rb $(srcdir)/opencl_model.rb $(ML_FILES) cl.xml.patched $(srcdir)/tracer_opencl_helpers.include.c $(OPENCL_PROBES_INCL) tracer_opencl.h
 	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_opencl.rb > $@
 
-bin_SCRIPTS = tracer_opencl.sh clprof.sh
+bin_SCRIPTS = tracer_opencl.sh clprof.sh babeltrace_opencl extract_enqueues
 
 noinst_LTLIBRARIES = libtracepoints.la
 
@@ -86,7 +86,7 @@ nodist_libtracepoints_la_SOURCES = \
 libtracepoints_la_CFLAGS = $(LTTNG_FLAGS) $(LTTNG_UST_CFLAGS)
 libtracepoints_la_LDFLAGS = $(LTTNG_UST_LIBS)
 
-lib_LTLIBRARIES = libTracerOpenCL.la libBabeltraceCL.la libCLProf.la
+lib_LTLIBRARIES = libTracerOpenCL.la libCLProf.la
 
 nodist_libTracerOpenCL_la_SOURCES = \
         $(OPENCL_PROBES_INCL) \
@@ -95,26 +95,10 @@ nodist_libTracerOpenCL_la_SOURCES = \
 
 libTracerOpenCL_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I../utils -I./
 libTracerOpenCL_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror
-libTracerOpenCL_la_LDFLAGS = $(LTTNG_UST_LIBS) -ldl $(LIBFFI_LIBS)
-libTracerOpenCL_la_LDFLAGS += -Wl,--version-script,$(srcdir)/tracer_opencl.map
+libTracerOpenCL_la_LDFLAGS = $(LTTNG_UST_LIBS) -ldl -lpthread $(LIBFFI_LIBS)
+libTracerOpenCL_la_LDFLAGS += -Wl,--version-script,$(srcdir)/tracer_opencl.map -version-info 1:0:0
 libTracerOpenCL_la_DEPENDS = $(srcdir)/tracer_opencl.map
 libTracerOpenCL_la_LIBADD = libtracepoints.la
-
-babeltrace_cl_callbacks.h: $(srcdir)/gen_babeltrace_cl_callbacks.rb opencl_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_babeltrace_cl_callbacks.rb > babeltrace_cl_callbacks.h
-
-babeltrace_cl_dispatchers.c: $(srcdir)/gen_babeltrace_cl_dispatchers.rb opencl_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_babeltrace_cl_dispatchers.rb > babeltrace_cl_dispatchers.c
-
-nodist_libBabeltraceCL_la_SOURCES = \
-	babeltrace_cl_dispatchers.c \
-	babeltrace_cl_callbacks.h
-libBabeltraceCL_la_SOURCES = \
-	babeltrace_cl.c \
-	babeltrace_cl.h
-libBabeltraceCL_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
-libBabeltraceCL_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
-libBabeltraceCL_la_LDFLAGS = $(BABELTRACE2_LIBS)
 
 clprof.c: $(srcdir)/clprof_callbacks.cpp.erb $(srcdir)/clprof_callbacks.h.erb $(srcdir)/clprof.c.erb $(srcdir)/gen_clprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
 	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_clprof.rb production
@@ -139,6 +123,131 @@ libCLProf_la_SOURCES = \
 libCLProf_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
 libCLProf_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
 libCLProf_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
-libCLProf_la_LDFLAGS = -lstdc++ $(BABELTRACE2_LIBS)
+libCLProf_la_LDFLAGS = -lstdc++ $(BABELTRACE2_LIBS) -avoid-version -module
 
-CLEANFILES = $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_TP) $(OPENCL_PROBES_SRC) tracer_opencl.c tracer_opencl.h cl.xml.patched opencl_model.yaml babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h clprof.c clprof_callbacks.cpp clprof_callbacks.h
+# Cannot use check_LTLIBRARIES because we need the shared version of those
+# Thanks Vincent Danjean
+#   noinst_LTLIBRARIES would be the correct thing but then libtool
+#   only built non shared version :-( So, declaring the libs as
+#   pkglib_LTLIBRARIES and using an install hook to remove them.
+pkglib_LTLIBRARIES = libBabeltraceCL.la libDust.la libTestingCLProf.la
+install-exec-hook::
+	$(RM) -r $(DESTDIR)$(pkglibdir)
+
+babeltrace_cl_callbacks.h: $(srcdir)/gen_babeltrace_cl_callbacks.rb opencl_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_babeltrace_cl_callbacks.rb > babeltrace_cl_callbacks.h
+
+babeltrace_cl_dispatchers.c: $(srcdir)/gen_babeltrace_cl_dispatchers.rb opencl_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_babeltrace_cl_dispatchers.rb > babeltrace_cl_dispatchers.c
+
+nodist_libBabeltraceCL_la_SOURCES = \
+	babeltrace_cl_dispatchers.c \
+	babeltrace_cl_callbacks.h
+libBabeltraceCL_la_SOURCES = \
+	babeltrace_cl.c \
+	babeltrace_cl.h
+libBabeltraceCL_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
+libBabeltraceCL_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
+libBabeltraceCL_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
+
+dust.c: $(srcdir)/dust.c.erb $(srcdir)/gen_clprof.rb opencl_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_clprof.rb dust
+
+nodist_libDust_la_SOURCES = \
+	dust.c
+libDust_la_CFLAGS = $(BABELTRACE2_CFLAGS)
+libDust_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
+
+testing_clprof.c: $(srcdir)/clprof_callbacks.cpp.erb $(srcdir)/clprof_callbacks.h.erb $(srcdir)/clprof.c.erb $(srcdir)/gen_clprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
+	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_clprof.rb testing
+
+testing_clprof_callbacks.cpp testing_clprof_callbacks.h: testing_clprof.c
+	@if test -f $@; then \
+	  touch $@; \
+	else \
+	  rm -f clprof.c; \
+	  $(MAKE) $(AM_MAKEFLAGS) testing_clprof.c; \
+	fi
+
+nodist_libTestingCLProf_la_SOURCES = \
+	testing_clprof.c \
+	testing_clprof_callbacks.cpp \
+	testing_clprof_callbacks.h \
+	tracer_opencl.h \
+	babeltrace_cl_dispatchers.c
+libTestingCLProf_la_SOURCES = \
+	clprof.h
+
+libTestingCLProf_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
+libTestingCLProf_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
+libTestingCLProf_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
+libTestingCLProf_la_LDFLAGS = -lstdc++ $(BABELTRACE2_LIBS) -avoid-version -module
+
+TEST_FILES = \
+	profiling_normal.dust \
+	profiling_inversed.dust \
+	profiling_block.dust \
+	profiling_fast.dust \
+	profiling_interleave_thread.dust \
+	profiling_interleave_process.dust \
+	profiling_normal_command_queue.dust \
+	profiling_with_error.dust \
+	profiling_normal_command_queue_created_in_other_thread.dust \
+	device_name.dust \
+	kernel_name.dust \
+	profiling_normal_nd_range_kernel_name.dust \
+	API_call.dust
+
+TESTS = $(TEST_FILES)
+	
+TEST_EXTENSIONS = .dust
+DUST_LOG_COMPILER = $(srcdir)/test_wrapper.sh
+
+data_DATA = \
+	opencl_model.yaml \
+	opencl_infos.yaml
+
+EXTRA_DIST = \
+	cl.xml \
+	cl.xml.patch \
+	$(ML_FILES) \
+	opencl_infos.yaml \
+	opencl_wrapper_events.yaml \
+	$(TRACEPOINT_GEN) \
+	include \
+	tracer_opencl.map \
+	tracer_opencl_helpers.include.c \
+	gen_opencl.rb \
+	gen_opencl_probes.rb \
+	gen_opencl_header.rb \
+	gen_opencl_model.rb \
+	gen_opencl_custom_probes.rb \
+	gen_babeltrace_cl_dispatchers.rb \
+	gen_babeltrace_cl_callbacks.rb \
+	dust.c.erb \
+	gen_clprof.rb \
+	clprof_callbacks.cpp.erb \
+	babeltrace_opencl.in \
+	extract_enqueues \
+	clprof.c.erb \
+	clprof_callbacks.h.erb \
+	test_wrapper.sh
+
+CLEANFILES = \
+	$(OPENCL_PROBES_INCL) \
+	$(OPENCL_PROBES_TP) \
+	$(OPENCL_PROBES_SRC) \
+	tracer_opencl.c \
+	tracer_opencl.h \
+	cl.xml.patched \
+	opencl_model.yaml \
+	babeltrace_cl_dispatchers.c \
+	babeltrace_cl_callbacks.h \
+	clprof.c \
+	clprof_callbacks.cpp \
+	clprof_callbacks.h \
+	dust.c \
+	testing_clprof.c \
+	testing_clprof_callbacks.cpp \
+	testing_clprof_callbacks.h \
+	$(TEST_FILES)
