Added ze to build system.

--- a/configure.ac
+++ b/configure.ac
@@ -70,10 +70,13 @@ AC_CHECK_FUNCS([atexit clock_gettime ftruncate memmove memset strdup strstr strt
 
 AC_CONFIG_FILES([Makefile
                  utils/Makefile
-                 opencl/Makefile])
+                 opencl/Makefile
+                 ze/Makefile])
+#                 cuda/Makefile])
 AC_CONFIG_FILES([opencl/tracer_opencl.sh], [chmod +x opencl/tracer_opencl.sh])
 AC_CONFIG_FILES([opencl/clprof.sh], [chmod +x opencl/clprof.sh])
 AC_CONFIG_FILES([opencl/babeltrace_opencl], [chmod +x opencl/babeltrace_opencl])
-#                 ze/Makefile
-#                 cuda/Makefile])
+AC_CONFIG_FILES([ze/babeltrace_ze], [chmod +x ze/babeltrace_ze])
+AC_CONFIG_FILES([ze/tracer_ze.sh], [chmod +x ze/tracer_ze.sh])
+AC_CONFIG_FILES([ze/zeprof.sh], [chmod +x ze/zeprof.sh])
 AC_OUTPUT
