--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -80,7 +80,7 @@ then
 fi
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
-export LD_LIBRARY_PATH=$pkglibdir:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
 lttng start
 
 ctrl_c() {
