--- a/xprof/iprof.in
+++ b/xprof/iprof.in
@@ -75,7 +75,7 @@ trace_and_summary() {
     #Preventing trace event record loss
     export LTTNG_UST_ALLOW_BLOCKING=1
     export LD_PRELOAD=$libdir/libTracerOpenCL.so:$libdir/libTracerZE.so:$LD_PRELOAD
-    export LD_LIBRARY_PATH=$pkglibdir:$LD_LIBRARY_PATH
+    export LD_LIBRARY_PATH=$pkglibdir/opencl:$pkglibdir/ze:$LD_LIBRARY_PATH
 
     lttng $quiet start
     trap 'trace_epilogue' EXIT SIGABRT SIGSEGV
