--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -53,7 +53,7 @@ then
 fi
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
-export LD_LIBRARY_PATH=$pkglibdir:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
 lttng start
 
 ctrl_c() {
