--- a/ze/zeprof.sh.in
+++ b/ze/zeprof.sh.in
@@ -40,7 +40,7 @@ trace() {
     #Preventing trace event record loss
     export LTTNG_UST_ALLOW_BLOCKING=1
     export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
-    export LD_LIBRARY_PATH=$pkglibdir:$LD_LIBRARY_PATH
+    export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
 
     lttng $quiet start
     trap 'trace_epilogue' EXIT SIGABRT SIGSEGV
