Added support for dumping CUDA arguments.

--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -20,7 +20,8 @@ whichlib() {
 while true; do
   case "$1" in
     --cudart) shift; cudart=1;;
-    -v | --visualize) shift; lttng_view=1;;
+    -a | --arguments ) shift; arguments=1;;
+    -v | --visualize ) shift; lttng_view=1;;
     -- ) shift; break ;;
     * ) break ;;
   esac
@@ -39,6 +40,10 @@ lttng enable-event --channel=blocking-channel --userspace lttng_ust_cuda:*
 if [ ! -z "$cudart" ]
 then
   lttng enable-event --channel=blocking-channel --userspace lttng_ust_cudart:*
+fi
+if [ ! -z "$arguments" ]
+then
+  lttng enable-event --channel=blocking-channel --userspace lttng_ust_cuda_args:*
 fi
 if [ -z "$LTTNG_UST_CUDA_LIBCUDA" ]
 then
